; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_wlshm.c_flip_page.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_wlshm.c_flip_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vo_wayland_state* }
%struct.vo_wayland_state = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*)* @flip_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flip_page(%struct.vo* %0) #0 {
  %2 = alloca %struct.vo*, align 8
  %3 = alloca %struct.vo_wayland_state*, align 8
  store %struct.vo* %0, %struct.vo** %2, align 8
  %4 = load %struct.vo*, %struct.vo** %2, align 8
  %5 = getelementptr inbounds %struct.vo, %struct.vo* %4, i32 0, i32 0
  %6 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %5, align 8
  store %struct.vo_wayland_state* %6, %struct.vo_wayland_state** %3, align 8
  %7 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %3, align 8
  %8 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %3, align 8
  %11 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @mp_rect_w(i32 %12)
  %14 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %3, align 8
  %15 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @mp_rect_h(i32 %16)
  %18 = call i32 @wl_surface_damage(i32 %9, i32 0, i32 0, i32 %13, i32 %17)
  %19 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %3, align 8
  %20 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @wl_surface_commit(i32 %21)
  ret void
}

declare dso_local i32 @wl_surface_damage(i32, i32, i32, i32, i32) #1

declare dso_local i32 @mp_rect_w(i32) #1

declare dso_local i32 @mp_rect_h(i32) #1

declare dso_local i32 @wl_surface_commit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
